// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleQuestion.responses array fetches a simple question's responses: 1 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`SimpleQuestion.responses array fetches a simple question's responses: 2 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [
        Object {
          "node": Object {
            "value": "Trop cool ! On va voir Tibo qui cours en slip !",
          },
        },
        Object {
          "node": Object {
            "value": "Je pense que c'est la ville parfaite pour organiser les JO",
          },
        },
        Object {
          "node": Object {
            "value": "Trop bien ! On va voir de supers athlètes à Paris !",
          },
        },
      ],
      "totalCount": 3,
    },
  },
}
`;

exports[`SimpleQuestion.responses array fetches a simple question's responses: 3 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`SimpleQuestion.responses array fetches a simple question's responses: 4 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`SimpleQuestion.responses array fetches a simple question's responses: 5 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`SimpleQuestion.responses array fetches a simple question's responses: 6 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`SimpleQuestion.responses array fetches a simple question's responses: 7 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`SimpleQuestion.responses array fetches a simple question's responses: 8 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`SimpleQuestion.responses array fetches a simple question's responses: 9 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`SimpleQuestion.responses array fetches a simple question's responses: 10 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`SimpleQuestion.responses array fetches a simple question's responses: 666 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`SimpleQuestion.responses array fetches a simple question's responses: 1313 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`SimpleQuestion.responses array fetches a simple question's responses: 1314 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;

exports[`SimpleQuestion.responses array fetches a simple question's responses: 1315 1`] = `
Object {
  "node": Object {
    "responses": Object {
      "edges": Array [],
      "totalCount": 0,
    },
  },
}
`;
